buscar objetos sin parentId